@@ -1995,8 +1995,9 @@
 <br>
 <br>
 <b>4.3.x</b><br>
-1) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
-2) miniupnpd: up to 2.0 version.<br>
+1) build_system: fix cleanup libext and optimize cleanup userdir.<br>
+2) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
+3) miniupnpd: up to 2.0 version.<br>
 <br>
 <br>
 <br>
